# open-brain

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  VERSION  cliff.toml  docker-compose.service.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
python/: .coverage  .gitignore  pyproject.toml
python/scripts/: create_user.py
python/src/open_brain/: __init__.py  __main__.py  capture_router.py  config.py  digest.py  evolution.py  learnings_state.py  migrate.py  regenerate.py  server.py  session_summary.py  utils.py  wake_up.py
python/tests/: __init__.py  _fakes.py  conftest.py  test_adapter_registry.py  test_api_key_auth.py  test_auth.py  test_briefing.py  test_capture_router.py  test_cli.py  test_compact_memories.py  test_decay.py  test_dedup.py  test_doctor_includes_version.py  test_doctor_tool.py  test_domain_schemas.py  test_email_imap_protocol.py  test_email_ingest.py  test_email_mcp_tool.py  test_embedding.py  test_entity_extraction.py  test_entity_extraction_integ.py  test_evolution.py  test_health_503_on_db_down.py  test_health_subsystems.py  test_helpers.py  test_importance.py  test_ingest.py  test_ingest_metrics.py  test_ingest_runs.py  test_llm.py  test_macwhisper_connector.py  test_migrate_learnings.py  test_migrate_skill.py  test_observation_filter.py  test_people_dedup.py  test_people_query_helpers.py  test_periodic_learnings.py  test_person_migration.py  test_plugin_config.py  test_postgres.py  (+22 more)
python/tests/fixtures/: README.md  (+3 more)
(+152 files in other folders)
