[project]
name = "open-brain"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "tree-sitter-language-pack>=1.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
ob = "open_brain.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=open_brain --cov-report=term-missing --cov-report=html"
markers = [
    "integration: marks tests that require real external services (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["src/open_brain"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
